--- a/css/master.css
+++ b/css/master.css
@@ -26,36 +26,75 @@
     }
 
     h1{
-        margin-bottom: 0.5rem;
+        margin-bottom: 0rem;
         margin-top: 3rem;
     }
-
     h2{
-        color: #075AAB;/* set the text color of to #075AAB here */
-        margin-bottom: 2.5rem;
-        margin-top: 2.5rem;
-    }
-
-    h3{
         margin-bottom: 0;
         margin-top: 2rem;
     }
-
-    h4{
-        margin-top: 0.5rem;
+    h3{
+        color: rgba(117, 9, 9, 0.767);
         margin-bottom: 1rem;
+    }
+    h4{
+        margin-top: 1rem;
+        margin-bottom: 0rem;
     }
     h5{
         margin-top: 0.5rem;
+        margin-bottom: 0rem;
     }
-    hr{
-        margin-bottom: 3rem;
-        margin-top: 3rem;
-    }
-
-    /* this controls how the bullet points in the resume page looks */
     ul{
-        display: table;
-        margin: 0 auto;
+        /* display: table; */
+        margin: 0 0;
         text-align: left;
+        padding-inline-start: 20px;
+    }
+    .avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+    }
+    .resume-background{
+        background-color: whitesmoke;
+    }
+    hr.style2 {
+        border-top: 3px double #8c8b8b;
+    }
+    .left-align{
+        text-align: left;
+    }
+    div {
+        margin: 0 auto;
+        width: 80%;
+    }
+    .row{
+        display: flex;
+        width: 100%;
+    }
+    .column-left{
+        flex: 50%;
+        text-align: left;
+        width: 100%;
+    }
+    .column-right{
+        flex: 50%;
+        text-align: right;
+        width: 100%;
+        margin-right: 2rem;
+    }
+    div.project {
+        margin-left: 2rem;
+        width: 100%;
+    }
+    h1.contact{
+        margin-top: 7rem;
+    }
+    .print {
+        display:none
+    }
+     @media print {
+        .print {display:block}
+        .btn-print {display:none;}
     }
