--- a/css/master.css
+++ b/css/master.css
@@ -55,6 +55,7 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
+        margin-top: 3rem;
     }
     .resume-background{
         background-color: whitesmoke;
